Paths.get
Signed-off-by: xushizhe <xushizhe@huawei.com>